<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/back_layout"
        android:elevation="30dp"
        android:outlineAmbientShadowColor="@color/black"
        android:outlineSpotShadowColor="@color/colorAccent"
        app:cardCornerRadius="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/checken"
                app:civ_border_color="@color/red_item_background"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_Nmae"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/item_name"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/textView_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/description"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/text_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="350dp"
                    android:layout_marginStart="350dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/price"
                    android:textColor="@color/red_item_background"
                    android:textSize="18dp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>


    <!--</android.support.v7.widget.CardView>-->

    <!--</RelativeLayout>-->



